style: update to fix spacing layout of home items

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,7 +10,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 100px 50px 0px 50px;
+  padding: 80px 50px 0px 50px;
+  gap: 20px;
 }
 
 .leftText {
@@ -101,6 +102,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 100px 50px 0px 50px;
+    gap: 20px;
   }
 
   .leftText {
